# MayaPartioTools

./: CMakeLists.txt  Changelog.txt  LICENSE  README.md
cmake/: FindMaya.cmake
scripts/: AEPartioEmitterNodeTemplate.mel  AEPartioVisualizerNodeTemplate.mel  MayaPartioTools.mel
src/: PartioEmitter.cpp  PartioEmitter.h  PartioVisualizer.cpp  PartioVisualizer.h  PartioVisualizerDrawOverride.cpp  PartioVisualizerDrawOverride.h  PluginMain.cpp  Shader.cpp  Shader.h
